refactor: 수동 로또 입력받아 출력 기능 추가