@@ -29,6 +29,7 @@ class ResultViewTest {
 
     private final ByteArrayOutputStream outputStreamCaptor = new ByteArrayOutputStream();
     private final Lottos lottos = new Lottos(new TestNumberGenerator(), 2);
+    private final Lottos manualLottos = new Lottos(new ManualTestNumberGenerator(), 1);
 
     @BeforeEach
     public void setUp() {
@@ -38,11 +39,13 @@ class ResultViewTest {
     @Test
     @DisplayName("생성된 로또 출력 확인")
     void printGeneratedLottosTest() {
-        ResultView.printGeneratedLottos(lottos.getLottos());
+        ResultView.printGeneratedLottos(manualLottos.getLottos(), lottos.getLottos());
 
         assertThat(outputStreamCaptor.toString())
-            .contains("2개를 ")
-            .contains("[1, 2, 5, 7, 33, 41]");
+            .contains("수동으로 1장")
+            .contains("[8, 21, 23, 41, 42, 43]")
+            .contains("자동으로 2개")
+            .contains("[1, 2, 3, 4, 5, 7]");
     }
 
     @Test
@@ -65,7 +68,7 @@ class ResultViewTest {
         InvocationTargetException,
         InstantiationException,
         IllegalAccessException {
-        LottoMoney lottoMoney = new LottoMoney(14000);
+        LottoMoney lottoMoney = new LottoMoney(14000, 0);
 
         Constructor<Yield> yieldConstructor = Yield.class.getDeclaredConstructor(LottoMoney.class, long.class);
         yieldConstructor.setAccessible(true);
@@ -94,8 +97,25 @@ class ResultViewTest {
         }
 
         private Iterator<List<Integer>> generateLotto() {
-            List<List<Integer>> LottoNumberList = new ArrayList<>(Arrays.asList(Arrays.asList(1, 2, 3, 4, 5, 7),
+            List<List<Integer>> LottoNumberList = new ArrayList<>(List.of(List.of(1, 2, 3, 4, 5, 7),
                 Arrays.asList(1, 2, 5, 7, 33, 41)));
+            return LottoNumberList.iterator();
+        }
+    }
+
+    static class ManualTestNumberGenerator implements LottoNumberGenerator {
+        private final Iterator<List<Integer>> lottoList = generateLotto();
+
+        @Override
+        public List<Integer> generate() {
+            if (lottoList.hasNext()) {
+                return lottoList.next();
+            }
+            return Collections.emptyList();
+        }
+
+        private Iterator<List<Integer>> generateLotto() {
+            List<List<Integer>> LottoNumberList = new ArrayList<>(List.of(List.of(8, 21, 23, 41, 42, 43)));
             return LottoNumberList.iterator();
         }
     }
